--- a/templates/index.html
+++ b/templates/index.html
@@ -68,28 +68,28 @@
                 <i class="fas fa-times"></i>
             </a>
             <div class="tm-row tm-intro-row">
-                <img src="/static/img/intro.jpg" alt="Image" class="tm-intro-img">
+                <img src="/static/img/intro.jpg" alt="Intro" class="tm-intro-img">
                 <div class="tm-col tm-bg-white tm-intro-pad">
-                    <h2 class="tm-color-primary tm-page-title">Introducing Jernihin</h2>
+                    <h2 class="tm-color-primary tm-page-title">Apa itu Jernihin?</h2>
                     <div class="tm-row tm-content-row">
                         <div class="tm-col-6 tm-intro-col-l">
                             <p>
                                 Air yang aman dan tersedia sangat penting untuk kesehatan masyarakat, baik itu digunakan untuk minum, keperluan rumah tangga, produksi makanan atau tujuan rekreasi.
                             </p>
                             <p>
-                                Indeks kualitas air (WQI/<i>Wataer Quality Index</i>) merupakan alat ukur yang penting untuk menentukan kualitas air sebagai indeks yang mencerminkan pengaruh gabungan dari berbagai parameter kualitas air yang dipertimbangkan dan diambil untuk perhitungan indeks kualitas air.
-                            </p>
-                            <p class="tm-mb-0">
-                                Jadi, kami mengambil beberapa inspirasi untuk menggunakan dataset indeks kualitas air (WQI) untuk memahami jenis air minum yang aman dan menerapkan <i>machine learning</i> untuk membedakan antara air minum dan air yang tidak layak untuk diminum.
+                                Indeks kualitas air (WQI/<i>Water Quality Index</i>) merupakan alat ukur yang penting untuk menentukan kualitas air sebagai indeks yang mencerminkan pengaruh gabungan dari berbagai parameter kualitas air yang dipertimbangkan dan diambil untuk perhitungan indeks kualitas air.
                             </p>
                         </div>
                         <div class="tm-col-6">
                             <p>
-                                Jernih in adalah aplikasi berbasis website untuk memprediksi tingkat kejernihan air yang dapat memberikan hasil prediksi kualitas air, apakah aman untuk dikonsumsi atau tidak layak untuk dikonsumsi.
+                                Jadi, kami mengambil beberapa inspirasi untuk menggunakan <i>dataset</i> indeks kualitas air (WQI) untuk memahami jenis air minum yang aman dengan menerapkan <i>machine learning</i> untuk membedakan antara air minum dan air yang tidak layak untuk diminum.
+                            </p>
+                            <p>
+                                Jernihin adalah aplikasi berbasis <i>website</i> untuk memprediksi tingkat kualitas air yang dapat memberikan hasil prediksi air tersebut apakah aman untuk dikonsumsi atau tidak layak untuk dikonsumsi.
                             </p>
                             <div class="tm-text-center">
-                                <a href="#" class="tm-btn tm-btn-primary mfp-prevent-close tm-btn-next">
-                                    Next Page
+                                <a href="#" class="tm-btn mfp-prevent-close tm-btn-next">
+                                    Coba Prediksi
                                 </a>
                             </div>
                         </div>
@@ -103,10 +103,10 @@
             <a href="#" class="tm-close-popup">
                 <i class="fas fa-times"></i>
             </a>
-            <h2 class="tm-color-primary tm-about-col tm-mb-40 tm-page-title">prediction page</h2>
+            <h2 class="tm-color-primary tm-about-col tm-mb-40 tm-page-title">Prediksi Kualitas Air</h2>
             <div class="tm-row tm-about-row">
                 <div class="tm-col tm-about-col tm-about-left">                    
-                    <img src="/static/img/about.jpg" alt="Image" class="tm-mb-30">
+                    <img src="/static/img/about.jpg" alt="Prediction" class="tm-mb-30">
                     <p class="tm-mb-40">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -129,8 +129,8 @@
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     </p>
-                    <a href="#" class="tm-btn tm-btn-primary mfp-prevent-close tm-btn-next">
-                        Our Team
+                    <a href="#" class="tm-btn mfp-prevent-close tm-btn-next">
+                        Prediksi Sekarang!
                     </a>
                 </div>
             </div>
@@ -144,29 +144,37 @@
             <div class="tm-row tm-gallery-row">
                 <div class="tm-gallery">
                     <div class="tm-gallery-container">
-                        <figure class="effect-chico tm-gallery-item portrait">
-                            <img src="/static/img/portrait-01.jpg" alt="Image"/>
-                            <figcaption>
-                                <p>Gilang</p>
-                            </figcaption>
+                        <figure class="effect-chico tm-gallery-item gilang">
+                            <a href="https://www.linkedin.com/in/agilangaleyustas" target="_blank">
+                                <img src="/static/img/portrait-01.jpg" alt="Gilang"/>
+                                <figcaption>
+                                    <p>Gilang</p>
+                                </figcaption>
+                            </a>
                         </figure>
-                        <figure class="effect-chico tm-gallery-item nature">
-                            <img src="/static/img/nature-01.jpg" alt="Image"/>
-                            <figcaption>
-                                <p>Ades</p>
-                            </figcaption>
+                        <figure class="effect-chico tm-gallery-item ades">
+                            <a href="https://www.linkedin.com/in/ades-tikaningsih-25a571244" target="_blank">
+                                <img src="/static/img/nature-01.jpg" alt="Ades"/>
+                                <figcaption>
+                                    <p>Ades</p>
+                                </figcaption>
+                            </a>
                         </figure>
-                        <figure class="effect-chico tm-gallery-item animal">
-                            <img src="/static/img/animal-01.jpg" alt="Image"/>
-                            <figcaption>
-                                <p>Andrew</p>
-                            </figcaption>
+                        <figure class="effect-chico tm-gallery-item andrew">
+                            <a href="https://www.linkedin.com/in/andrewbjamesie" target="_blank">
+                                <img src="/static/img/animal-01.jpg" alt="Andrew"/>
+                                <figcaption>
+                                    <p>Andrew</p>
+                                </figcaption>
+                            </a>
                         </figure>
-                        <figure class="effect-chico tm-gallery-item building">
-                            <img src="/static/img/building-01.jpg" alt="Image"/>
-                            <figcaption>
-                                <p>Cheliza</p>
-                            </figcaption>
+                        <figure class="effect-chico tm-gallery-item cheliza">
+                            <a href="https://www.linkedin.com/in/chelizasriayusimarsoit" target="_blank">
+                                <img src="/static/img/building-01.jpg" alt="Cheliza"/>
+                                <figcaption>
+                                    <p>Cheliza</p>
+                                </figcaption>
+                            </a>
                         </figure>
                     </div>
                 </div>
@@ -183,25 +191,25 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="tm-gallery-link" data-filter="portrait">
+                                <a href="#" class="tm-gallery-link" data-filter="gilang">
                                     <i class="fas fa-portrait tm-gallery-link-icon"></i>
                                     A. Gilang Aleyusta Savada
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="tm-gallery-link" data-filter="nature">
+                                <a href="#" class="tm-gallery-link" data-filter="ades">
                                     <i class="fas fa-portrait tm-gallery-link-icon"></i>
                                     Ades Tikaningsih
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="tm-gallery-link" data-filter="animal">
+                                <a href="#" class="tm-gallery-link" data-filter="andrew">
                                     <i class="fas fa-portrait tm-gallery-link-icon"></i>
                                     Andrew Benedictus Jamesie
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="tm-gallery-link" data-filter="building">
+                                <a href="#" class="tm-gallery-link" data-filter="cheliza">
                                     <i class="fas fa-portrait tm-gallery-link-icon"></i>
                                     Cheliza Sriayu Simarsoit
                                 </a>
@@ -216,7 +224,7 @@
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         </p>
                     </div>
-                    <a href="#" class="tm-btn tm-btn-primary mfp-prevent-close tm-btn-next">
+                    <a href="#" class="tm-btn mfp-prevent-close tm-btn-next">
                         Contact Us
                     </a>
                 </div>
@@ -233,16 +241,16 @@
                 <div class="tm-col tm-contact-col">
                     <form id="contact-form" action="" method="POST" class="tm-contact-form">
                         <div class="form-group">
-                            <input type="text" name="name" class="form-control rounded-0" placeholder="Full Name" required/>
+                            <input type="text" name="name" class="form-control rounded-0" placeholder="Full Name" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" name="email" class="form-control rounded-0" placeholder="Email" required/>
+                            <input type="email" name="email" class="form-control rounded-0" placeholder="Email" required>
                         </div>
                         <div class="form-group">
                             <textarea rows="8" name="message" class="form-control rounded-0" placeholder="Message" required></textarea>
                         </div>
                         <div class="form-group tm-text-right">
-                            <button type="submit" class="tm-btn tm-btn-primary">Send it now</button>
+                            <button type="submit" class="tm-btn">Send it now</button>
                         </div>
                     </form>
                 </div>
@@ -291,46 +299,42 @@
     </div>
 
     <div class="tm-container">
-        <form id="contact-form" action="" method="POST" class="tm-contact-form">
+        <form id="contact-form" action="/predict" method="POST" class="tm-contact-form">
             <div class="form-group">
-                <input type="text" name="name" class="form-control rounded-0" placeholder="Full Name" required/>
+                <label for="fecal">Fecal</label>
+                <input type="text" name="fecal" class="form-control rounded-0" placeholder="Fecal" required>
             </div>
             <div class="form-group">
-                <input type="email" name="email" class="form-control rounded-0" placeholder="Email" required/>
+                <label for="oxygen">Oxygen</label>
+                <input type="text" name="oxygen" class="form-control rounded-0" placeholder="Oxygen" required>
             </div>
             <div class="form-group">
-                <textarea rows="8" name="message" class="form-control rounded-0" placeholder="Message" required></textarea>
+                <label for="ph">pH</label>
+                <input type="text" name="ph" class="form-control rounded-0" placeholder="pH" required>
+            </div>
+            <div class="form-group">
+                <label for="tot_sediment">Total Sediment</label>
+                <input type="text" name="tot_sediment" class="form-control rounded-0" placeholder="Total Sediment" required>
+            </div>
+            <div class="form-group">
+                <label for="temp">Temperature</label>
+                <input type="text" name="temp" class="form-control rounded-0" placeholder="Temperature" required>
+            </div>
+            <div class="form-group">
+                <label for="nitrogen">Nitrogen</label>
+                <input type="text" name="nitrogen" class="form-control rounded-0" placeholder="Nitrogen" required>
+            </div>
+            <div class="form-group">
+                <label for="phosphorus">Phosphorus</label>
+                <input type="text" name="phosphorus" class="form-control rounded-0" placeholder="Phosphorus" required>
+            </div>
+            <div class="form-group">
+                <label for="turbidity">Turbidity</label>
+                <input type="text" name="turbidity" class="form-control rounded-0" placeholder="Turbidity" required>
             </div>
             <div class="form-group tm-text-right">
-                <button type="submit" class="tm-btn tm-btn-primary">Send it now</button>
+                <button type="submit" class="tm-btn">Predict</button>
             </div>
-        </form>
-        <form action="/predict" method="POST">
-            <label for="fecal">Fecal</label>
-            <input type="text" name="fecal" placeholder="Fecal" required>
-            <br>
-            <label for="oxygen">Oxygen</label>
-            <input type="text" name="oxygen" placeholder="Oxygen" required>
-            <br>
-            <label for="ph">pH</label>
-            <input type="text" name="ph" placeholder="pH" required>
-            <br>
-            <label for="tot_sediment">Total Sediment</label>
-            <input type="text" name="tot_sediment" placeholder="Total Sediment" required>
-            <br>
-            <label for="temp">Temperature</label>
-            <input type="text" name="temp" placeholder="Temperature" required>
-            <br>
-            <label for="nitrogen">Nitrogen</label>
-            <input type="text" name="nitrogen" placeholder="Nitrogen" required>
-            <br>
-            <label for="phosphorus">Phosphorus</label>
-            <input type="text" name="phosphorus" placeholder="Phosphorus" required>
-            <br>
-            <label for="turbidity">Turbidity</label>
-            <input type="text" name="turbidity" placeholder="Turbidity" required>
-            <br>
-            <button type="submit">Predict</button>
         </form>
         <br>
     
