update about us

--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,8 @@
                     <div class="tm-gallery-container">
                         <figure class="effect-chico tm-gallery-item gilang">
                             <a href="https://www.linkedin.com/in/agilangaleyustas" target="_blank">
-                                <img src="/static/img/portrait-01.jpg" alt="Gilang"/>
+                                <!-- <img src="/static/img/portrait-01.jpg" alt="Gilang"/> -->
+                                <img src="/static/img/team_gilang.jpg" alt="Gilang"/>
                                 <figcaption>
                                     <p>Gilang</p>
                                 </figcaption>
@@ -154,7 +155,8 @@
                         </figure>
                         <figure class="effect-chico tm-gallery-item ades">
                             <a href="https://www.linkedin.com/in/ades-tikaningsih-25a571244" target="_blank">
-                                <img src="/static/img/nature-01.jpg" alt="Ades"/>
+                                <!-- <img src="/static/img/nature-01.jpg" alt="Ades"/> -->
+                                <img src="/static/img/team_ades.jpg" alt="Ades"/>
                                 <figcaption>
                                     <p>Ades</p>
                                 </figcaption>
@@ -162,7 +164,8 @@
                         </figure>
                         <figure class="effect-chico tm-gallery-item andrew">
                             <a href="https://www.linkedin.com/in/andrewbjamesie" target="_blank">
-                                <img src="/static/img/animal-01.jpg" alt="Andrew"/>
+                                <!-- <img src="/static/img/animal-01.jpg" alt="Andrew"/> -->
+                                <img src="/static/img/team_andrew.jpg" alt="Andrew"/>
                                 <figcaption>
                                     <p>Andrew</p>
                                 </figcaption>
@@ -170,7 +173,8 @@
                         </figure>
                         <figure class="effect-chico tm-gallery-item cheliza">
                             <a href="https://www.linkedin.com/in/chelizasriayusimarsoit" target="_blank">
-                                <img src="/static/img/building-01.jpg" alt="Cheliza"/>
+                                <!-- <img src="/static/img/building-01.jpg" alt="Cheliza"/> -->
+                                <img src="/static/img/team_cheliza.jpeg" alt="Cheliza"/>
                                 <figcaption>
                                     <p>Cheliza</p>
                                 </figcaption>
@@ -181,7 +185,7 @@
 
                 <!-- navigation and description -->
                 <div class="tm-col tm-gallery-right">
-                    <h2 class="tm-color-primary tm-mt-35 tm-page-title">Development Team</h2>
+                    <h2 class="tm-color-primary tm-mt-15 tm-page-title">Development Team</h2>
                     <div class="tm-gallery-right-inner">
                         <ul class="tm-gallery-links">
                             <li>
@@ -216,12 +220,10 @@
                             </li>
                         </ul>
                         <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Kami tim Jernihin, mahasiswa semester 5 yang berasal dari Teknik Informatika Universitas Lampung, Informatika Universitas AMIKOM Purwokerto, dan Ilmu Komputer Universitas Sumatera Utara.
                         </p>
                         <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Kami merupakan Capstone Team C22-078 SIB Dicoding Cycle 3 yang berfokus pada Machine Learning dan Front-End Web Developer.
                         </p>
                     </div>
                     <a href="#" class="tm-btn mfp-prevent-close tm-btn-next">
