--- a/static/css/jernihin.css
+++ b/static/css/jernihin.css
@@ -1,8 +1,3 @@
-/*
-TemplateMo 554 Ocean Vibes
-https://templatemo.com/tm-554-ocean-vibes
-*/
-
 html { overflow-x: hidden; }
 
 body {
@@ -13,10 +8,7 @@ body {
 }
 
 p, span, em, a, address { color: #848586; }
-h2, p {
-    margin-top: 0;
-}
-
+h2, p { margin-top: 0; }
 a:hover, a.active { color: #3282FF; }
 
 .tm-btn {
@@ -43,6 +35,7 @@ h1 { font-size: 3rem; }
 em { display: block; }
 div { box-sizing: border-box;}
 .tm-mt-0 { margin-top: 0; }
+.tm-mt-15 { margin-top: 15px; }
 .tm-mt-35 { margin-top: 35px; }
 .tm-mb-0 { margin-bottom: 0; }
 .tm-mb-15 { margin-bottom: 15px; }
@@ -58,9 +51,9 @@ div { box-sizing: border-box;}
 .tm-color-light-gray { color: #9E9FA0; }
 .tm-bg-white { background-color: #FFF; }
 .tm-bg-gray { background-color: #F1F2F3; }
+.tm-page-title { font-size: 30px; }
 blockquote { margin: 0 0 30px 10px; }
 img { max-width: 100%; }
-.tm-page-title { font-size: 30px; }
 
 body, ul {
     margin: 0;
@@ -99,7 +92,7 @@ a {
     bottom: 20px;
     right: 20px;
     z-index: 1000;
-    color: #e1e1e1;
+    color: #E1E1E1;
 }
 
 .tm-nav-item {
@@ -180,36 +173,37 @@ a {
 .popup {
     position: relative;
     padding: 12px 10px 35px;
-    width:auto;
+    width: auto;
     max-width: 1200px;
     margin: 0 auto; 
 }
 
-/* 
-
-====== Move-from-top effect ======
-
-*/
+/* Move-from-top effect */
 .mfp-move-from-top .mfp-with-anim {
     opacity: 0;
     transition: all 0.2s;
     transform: translateY(-100px);
 }
+
 .mfp-move-from-top.mfp-bg {
     opacity: 0;
     transition: all 0.2s;
 }
+
 .mfp-move-from-top.mfp-ready .mfp-with-anim {
     opacity: 1;
     transform: translateY(0);
 }
+
 .mfp-move-from-top.mfp-ready.mfp-bg {
     opacity: 0.8;
 }
+
 .mfp-move-from-top.mfp-removing .mfp-with-anim {
     transform: translateY(-50px);
     opacity: 0;
 }
+
 .mfp-move-from-top.mfp-removing.mfp-bg {
     opacity: 0;
 }
@@ -226,59 +220,23 @@ button.mfp-arrow {
 
 /* Gallery */
 .tm-gallery {
-    flex: 0 0 68%;
+    flex: 0 0 60.6%;
     margin: 0 20px;
 }
 
-.tm-gallery-container {
-    position: relative;    
-    max-width: 800px;
-    margin: 0 -10px;
-	list-style: none;
-    text-align: center;
-}
-
-.tm-paging {
-    overflow: auto;
-    margin-top: 25px;
-}
-
-.tm-paging li {
-    list-style: none;
-}
-
-.tm-paging-link {
-    display: flex;
-    float: left;
-    width: 40px;
-    height: 40px;
-    align-items: center;
-    justify-content: center;
-    background: white;
-    color: #999;
-    margin-right: 15px;
-    margin-bottom: 15px;
-}
-
-a.tm-paging-link.active,
-a.tm-paging-link:hover {
-    background: #3282FF;
-    color: white;
-}
-
 .tm-gallery-right {
-    flex: 0 0 26%;
+    flex: 0 0 33.4%;
     margin-left: 15px;
 }
 
 .tm-gallery-links {
-    margin-left: 35px;
-    margin-bottom: 55px;
+    margin-left: 20px;
+    margin-bottom: 20px;
 }
 
 .tm-gallery-links li {
     list-style: none;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .tm-gallery-link-icon {
@@ -286,12 +244,20 @@ a.tm-paging-link:hover {
     width: 30px;
 }
 
+.tm-gallery-container {
+    position: relative;    
+    max-width: 800px;
+    margin: 0 -10px;
+    list-style: none;
+    text-align: center;
+}
+
 .tm-gallery-item {
     overflow: hidden;
     margin: 15px 10px;
-    min-width: 180px;
-    max-width: 180px;
-    max-height: 240px;
+    min-width: 225px;
+    max-width: 225px;
+    max-height: 300px;
     width: 25%;
     background: #79AAFF;
     text-align: center;
@@ -308,7 +274,7 @@ a.tm-paging-link:hover {
 
 .tm-gallery-container figure figcaption {
 	padding: 2em;
-	color: #fff;
+	color: #FFF;
 	text-transform: uppercase;
 	font-size: 1.25em;
 	-webkit-backface-visibility: hidden;
@@ -350,10 +316,7 @@ a.tm-paging-link:hover {
 	font-size: 68.5%;
 }
 
-/*---------------*/
-/***** Chico *****/
-/*---------------*/
-
+/* Chico */
 figure.effect-chico img {
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
@@ -380,7 +343,7 @@ figure.effect-chico figcaption::before {
 	right: 15px;
 	bottom: 15px;
 	left: 15px;
-	border: 1px solid #fff;
+	border: 1px solid #FFF;
 	content: '';
 	-webkit-transform: scale(1.1);
 	transform: scale(1.1);
@@ -414,16 +377,16 @@ figure.effect-chico:hover p {
 
 /* About */
 .mapouter{
-    position:relative;
-    height:250px;
-    width:100%;
+    position: relative;
+    height: 250px;
+    width: 100%;
 }
 
 .gmap_canvas {
-    overflow:hidden;
-    background:none!important;
-    height:250px;
-    width:100%;
+    overflow: hidden;
+    background: none!important;
+    height: 250px;
+    width: 100%;
 }
 .tm-contact-row {
     max-width: 1045px;
@@ -451,7 +414,7 @@ figure.effect-chico:hover p {
 
 .tm-contact-form {
     max-width: 350px;
-    margin-left: 40px;
+    margin-left: 0px;
     margin-right: 40px;
 }
 
@@ -509,6 +472,7 @@ address {
     .tm-about-row {
         flex-direction: column;
     }
+
     .tm-about-col {
         flex: 0 0 100%;
     }
@@ -538,12 +502,31 @@ address {
     }
 }
 
-@media (max-width: 902px) {
-    .tm-gallery {
-        flex: 0 0 50%;
+@media (max-width: 1214px) {
+    .popup {
+        max-width: 900px;
     }
+
+    .tm-gallery {
+        flex: 0 0 53.5%;
+    }
+    
     .tm-gallery-right {
-        flex: 0 0 38%;
+        flex: 0 0 37%;
+    }
+}
+
+@media (max-width: 912px) {
+    .popup {
+        max-width: 600px;
+    }
+
+    .tm-gallery {
+        flex: 0 0 38.8%;
+    }
+    
+    .tm-gallery-right {
+        flex: 0 0 45%;
     }
 }
 
@@ -551,13 +534,16 @@ address {
     .tm-gallery-row {
         flex-direction: column-reverse;
     }
+
     .tm-gallery {
         flex: 0 0 100%;
     }
+
     .tm-gallery-right {        
         flex: 0 0 100%;
         margin-left: 20px;
         margin-right: 20px;
+        margin-bottom: 20px;
     }
 
     .tm-gallery-right-inner {
@@ -568,7 +554,7 @@ address {
     .tm-gallery-links {
         display: flex;
         flex-wrap: wrap;
-        margin-top: 20px;
+        margin-top: none;
         margin-bottom: 0;
         margin-left: 0;
     }
@@ -578,7 +564,7 @@ address {
     }
 }
 
-@media (max-width: 850px) {
+@media (max-width: 912px) {
     .tm-content-row {
         flex-direction: column;
     }
