update src jinja template

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Jernihin</title>
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap">
-    <link rel="stylesheet" href="/static/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="/static/css/magnific-popup.css">
-    <link rel="stylesheet" href="/static/css/jernihin.css">
-    <link rel="shortcut icon" href="/static/img/Jernihin.svg" type="image/x-icon">
+    <link rel="stylesheet" href="{{url_for('static', filename='fontawesome/css/all.min.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/magnific-popup.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/jernihin.css')}}">
+
+    <link rel="shortcut icon" href="{{url_for('static', filename='img/Jernihin.svg')}}" type="image/x-icon">
+    
+    <title>Jernihin</title>
 </head>
 <body>
     <!-- Header -->
@@ -22,7 +23,7 @@
     <!-- Video banner 400 px height -->
     <div id="tm-video-container">
         <video autoplay muted loop id="tm-video">
-            <source src="/static/video/ocean-sea-wave-video.mp4" type="video/mp4">
+            <source src="{{url_for('static', filename='video/ocean-sea-wave-video.mp4')}}" type="video/mp4">
         </video>  
         <i id="tm-video-control-button" class="fas fa-pause"></i>
     </div>
@@ -68,7 +69,7 @@
                 <i class="fas fa-times"></i>
             </a>
             <div class="tm-row tm-intro-row">
-                <img src="/static/img/intro.jpg" alt="Intro" class="tm-intro-img">
+                <img src="{{url_for('static', filename='img/intro.jpg')}}" alt="Intro" class="tm-intro-img">
                 <div class="tm-col tm-bg-white tm-intro-pad">
                     <h2 class="tm-color-primary tm-page-title">Apa itu Jernihin?</h2>
                     <div class="tm-row tm-content-row">
@@ -106,7 +107,7 @@
             <h2 class="tm-color-primary tm-about-col tm-mb-40 tm-page-title">Prediksi Kualitas Air</h2>
             <div class="tm-row tm-about-row">
                 <div class="tm-col tm-about-col tm-about-left">                    
-                    <img src="/static/img/about.jpg" alt="Prediction" class="tm-mb-30">
+                    <img src="{{url_for('static', filename='img/about.jpg')}}" alt="Prediction" class="tm-mb-30">
                     <p class="tm-mb-40">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -146,8 +147,7 @@
                     <div class="tm-gallery-container">
                         <figure class="effect-chico tm-gallery-item gilang">
                             <a href="https://www.linkedin.com/in/agilangaleyustas" target="_blank">
-                                <!-- <img src="/static/img/portrait-01.jpg" alt="Gilang"/> -->
-                                <img src="/static/img/team_gilang.jpg" alt="Gilang"/>
+                                <img src="{{url_for('static', filename='img/team_gilang.jpg')}}" alt="Gilang"/>
                                 <figcaption>
                                     <p>Gilang</p>
                                 </figcaption>
@@ -155,8 +155,7 @@
                         </figure>
                         <figure class="effect-chico tm-gallery-item ades">
                             <a href="https://www.linkedin.com/in/ades-tikaningsih-25a571244" target="_blank">
-                                <!-- <img src="/static/img/nature-01.jpg" alt="Ades"/> -->
-                                <img src="/static/img/team_ades.jpg" alt="Ades"/>
+                                <img src="{{url_for('static', filename='img/team_ades.jpg')}}" alt="Ades"/>
                                 <figcaption>
                                     <p>Ades</p>
                                 </figcaption>
@@ -164,8 +163,7 @@
                         </figure>
                         <figure class="effect-chico tm-gallery-item andrew">
                             <a href="https://www.linkedin.com/in/andrewbjamesie" target="_blank">
-                                <!-- <img src="/static/img/animal-01.jpg" alt="Andrew"/> -->
-                                <img src="/static/img/team_andrew.jpg" alt="Andrew"/>
+                                <img src="{{url_for('static', filename='img/team_andrew.jpg')}}" alt="Andrew"/>
                                 <figcaption>
                                     <p>Andrew</p>
                                 </figcaption>
@@ -173,8 +171,7 @@
                         </figure>
                         <figure class="effect-chico tm-gallery-item cheliza">
                             <a href="https://www.linkedin.com/in/chelizasriayusimarsoit" target="_blank">
-                                <!-- <img src="/static/img/building-01.jpg" alt="Cheliza"/> -->
-                                <img src="/static/img/team_cheliza.jpeg" alt="Cheliza"/>
+                                <img src="{{url_for('static', filename='img/team_cheliza.jpg')}}" alt="Cheliza"/>
                                 <figcaption>
                                     <p>Cheliza</p>
                                 </figcaption>
@@ -361,10 +358,10 @@
         <span>C22-078 SIB Dicoding 3 Capstone Team</span>
     </footer>
 
-    <script src="/static/js/jquery-3.4.1.min.js"></script>
-    <script src="/static/js/imagesloaded.pkgd.min.js"></script>
-    <script src="/static/js/isotope.pkgd.min.js"></script>
-    <script src="/static/js/jquery.magnific-popup.min.js"></script>
-    <script src="/static/js/templatemo-script.js"></script>
+    <script src="{{url_for('static', filename='js/jquery-3.4.1.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/imagesloaded.pkgd.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/isotope.pkgd.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/jquery.magnific-popup.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/templatemo-script.js')}}"></script>
 </body>
 </html>
