--- a/templates/index.html
+++ b/templates/index.html
@@ -87,17 +87,18 @@
         <a href="#" class="tm-close-popup">
             <i class="fas fa-times"></i>
         </a>
-        <h2 class="tm-color-primary tm-about-col tm-mb-40 tm-page-title">Prediksi Kualitas Air</h2>
+        <h2 class="tm-color-primary tm-about-col tm-mb-40 tm-page-title">What is water quality index ?</h2>
         <div class="tm-row tm-about-row">
             <div class="tm-col tm-about-col tm-about-left">
                 <img src="{{url_for('static', filename='img/about.jpg')}}" alt="Prediction" class="tm-mb-30">
                 <p class="tm-mb-40">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                   "Save water, save life", Mari kita mengenal lebih dekat mengenai Water Quality Index.
                 </p>
                 <p class="tm-mb-40">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Water Quality Index (WQI) merupakan perbandingan data kualitas air dengan “Pedoman Kualitas Air Minum Kanada” . 
+                    WQI mengukur cakupan, frekuensi, dan amplitudo pelampauan kualitas air, lalu menggabungkan ketiga pengukuran tersebut 
+                    menjadi satu skor. Perhitungan ini menghasilkan skor antara 0 sampai 100. Semakin tinggi skor maka kualitas air semakin baik. 
+                    Skor kemudian diberi peringkat ke dalam salah satu dari lima kategori.
                 </p>
             </div>
             <div class="tm-col tm-about-col">
