--- a/templates/index.html
+++ b/templates/index.html
@@ -96,19 +96,31 @@
                 </p>
                 <p class="tm-mb-40">
                     Water Quality Index (WQI) merupakan perbandingan data kualitas air dengan “Pedoman Kualitas Air Minum Kanada” . 
-                    WQI mengukur cakupan, frekuensi, dan amplitudo pelampauan kualitas air, lalu menggabungkan ketiga pengukuran tersebut 
+                    WQI mengukur nilai pH, Oxygen, Total Suspended Sediment, Nitrogen, Turbidity, Phosphorus dan Fecal  lalu menggabungkan ketiga pengukuran tersebut 
                     menjadi satu skor. Perhitungan ini menghasilkan skor antara 0 sampai 100. Semakin tinggi skor maka kualitas air semakin baik. 
                     Skor kemudian diberi peringkat ke dalam salah satu dari lima kategori.
                 </p>
             </div>
             <div class="tm-col tm-about-col">
-                <p class="tm-mb-40">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                <p class="tm-mb-60">
+                    Pentingnya Kualitas Air dan Pemantauannya.
                 </p>
                 <p class="tm-mb-40">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                               <ol>
+                        <li>Air Salah Satu Kebutuhan Dasar Umat Manusia. </br>
+                            Air adalah salah satu kebutuhan paling fundamental untuk mendukung hajat hidup manusia.
+                            Hal ini tentunya merefleksikan betapa krusialnya air dalam hidup manusia. Meski begitu, 
+                            umat manusia kini tengah menghadapi tantangan akibat adanya isu terkait sumber dan ketersediaan air yang semakin kesini semakin mendesak dan harus ditangani.
+                        </li>
+                        <li>Kualitas Air Mendefinisikan Air yang Aman untuk Dikonsumsi.</br> 
+                            Kualitas air dapat didefinisikan sebagai pengukuran kecocokan air untuk kegunaan tertentu, yang biasanya didasarkan pada karakteristik sebagai berikut  :
+                            <ul>
+                                <li>Fisik: temperatur, warna, cahaya, sedimentasi yang berada di air</li>
+                                <li>Kimiawi: kandungan oksigen, tingkat keasaman (pH), salinitas, kandungan nutrien, serta kontaminan lain</li>
+                                <li>Biologis: bakteri, alga, dan fitoplankton.</li>
+                            </ul>
+                        </li>
+                    </ol>
                 </p>
                 <p class="tm-mb-40">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
